--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -27,6 +27,23 @@
   background-color: #e6e6e6;
 }
 
+.calculation-box {
+  height: 50px;
+  width: 200px;
+  position: absolute;
+  bottom: 40px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 15px;
+  text-align: center;
+  }
+  
+p {
+  font-family: 'Open Sans';
+  margin: 0;
+  font-size: 13px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
