--- a/uas4gis/src/mapLayouts/BaseMaps/BaseMaps.css
+++ b/uas4gis/src/mapLayouts/BaseMaps/BaseMaps.css
@@ -1,6 +1,6 @@
 #basemaps_menu {
     position: absolute;
-    background: #efefef;
+    background: #f8eaff;
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
     }
