--- a/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
+++ b/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
@@ -2,8 +2,8 @@
     background: #fff;
     position: absolute;
     z-index: 1;
-    top: 10px;
-    right: 52px;
+    top: 50px;
+    left: 10px;
     border-radius: 3px;
     width: 120px;
     border: 1px solid rgba(0, 0, 0, 0.4);
