--- a/uas4gis/src/mapLayouts/InfoBar/InfoBar.css
+++ b/uas4gis/src/mapLayouts/InfoBar/InfoBar.css
@@ -11,3 +11,18 @@
     margin: 12px 108px;
     border-radius: 4px;
   }
+
+
+@media screen and (max-width: 480px) {
+
+      
+  .sidebar {
+    height: 10%;
+    width: 100%;
+    bottom: 10%;
+    text-align: center;
+    border-radius: 0;
+    margin: 0 0;
+  }
+
+}
