--- a/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
+++ b/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
@@ -8,9 +8,9 @@
     width: 120px;
     border: 1px solid rgba(0, 0, 0, 0.4);
     font-family: 'Open Sans', sans-serif;
-    }
-     
-    #menu a {
+}
+
+#menu a {
     font-size: 13px;
     color: #404040;
     display: block;
@@ -20,22 +20,30 @@
     text-decoration: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
     text-align: center;
-    }
-     
-    #menu a:last-child {
+}
+
+#menu a:last-child {
     border: none;
-    }
-     
-    #menu a:hover {
+}
+
+#menu a:hover {
     background-color: #f8f8f8;
     color: #404040;
-    }
-     
-    #menu a.active {
+}
+
+#menu a.active {
     background-color: #3887be;
     color: #ffffff;
-    }
-     
-    #menu a.active:hover {
+}
+
+#menu a.active:hover {
     background: #3074a4;
+
+}
+
+@media screen and (max-width: 480px) {
+    #menu {
+        top: 20%;
     }
+
+}
