--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -31,42 +31,109 @@
   height: 50px;
   width: 200px;
   position: absolute;
-  bottom: 40px;
+  bottom: 60px;
   right: 10px;
   background-color: rgba(255, 255, 255, 0.7);
-  padding: 15px;
+  padding: 10px;
   text-align: center;
-  }
-  
+  display: none;
+  border-radius: 10px;
+}
+
 p {
   font-family: 'Open Sans';
   margin: 0;
   font-size: 13px;
 }
 
+.rounded-rect {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 0 50px -25px black;
+}
+
+.flex-center {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-center.left {
+  left: 0px;
+}
+
+.flex-center.right {
+  right: 0px;
+}
+
+.sidebar-content {
+  position: absolute;
+  width: 95%;
+  height: 95%;
+  color: gray;
+}
+
+.sidebar-toggle {
+  position: absolute;
+  width: 1.3em;
+  height: 1.3em;
+  overflow: visible;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar-toggle.left {
+  right: -1.5em;
+}
+
+.sidebar-toggle.right {
+  left: -1.5em;
+}
+
+.sidebar-toggle:hover {
+  color: #0aa1cf;
+  cursor: pointer;
+}
+
+.sidebar {
+  transition: transform 1s;
+  z-index: 1;
+  width: 200px;
+  top: 40px;
+  height: 80%;
+}
+
+/*
+The sidebar styling has them "expanded" by default, we use CSS transforms to push them offscreen
+The toggleSidebar() function removes this class from the element in order to expand it.
+*/
+.left.collapsed {
+  transform: translateX(-195px);
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-
-
 }
 
 
 @media screen and (max-width: 480px) {
 
   .calculation-box {
-    color: #FFF;
-    background-color: rgba(17, 37, 56, 0.9);
-    height: 5%;
-    right: 0;
-    width: 100%;
-    position: absolute;
-    bottom: 0px;
-    text-align: center;
-    }
+    bottom: 16%;
+    right: 10px;
+  }
 
-
+  .sidebar {
+    transition: transform 1s;
+    z-index: 1;
+    width: 200px;
+    top: 15%;
+    height: 70%;
+  }
 }
 
 .App-header {
