--- a/uas4gis/src/index.css
+++ b/uas4gis/src/index.css
@@ -16,7 +16,7 @@
   height: 80px;
   padding: 10px;
   border: none;
-  border-radius: 3px;
+  border-radius: 10px;
   font-size: 24px;
   text-align: center;
   color: #fff;
@@ -45,12 +45,13 @@ code {
   .map-container {
     position: absolute;
     top: 10%;
-    height: 70%;
+    height: 80%;
   }
 
   #titleblock {
     width: 100%;
     height: 10%;
+    border-radius: 0;
   }
 
 
