--- a/uas4gis/src/mapLayouts/InfoBar/InfoBar.css
+++ b/uas4gis/src/mapLayouts/InfoBar/InfoBar.css
@@ -1,9 +1,10 @@
 
-.sidebar {
+.infobar {
     background-color: rgba(35, 55, 75, 0.9);
     color: #fff;
     padding: 6px 12px;
     font-family: monospace;
+    font-size: medium;
     z-index: 1;
     position: absolute;
     bottom: 0;
@@ -13,13 +14,21 @@
   }
 
 
+@media screen and (max-width: 640px) {
+
+  .infobar {
+    font-size: x-small;
+  }
+
+}
+
 @media screen and (max-width: 480px) {
 
       
-  .sidebar {
+  .infobar {
     height: 10%;
     width: 100%;
-    bottom: 10%;
+    bottom: 0%;
     text-align: center;
     border-radius: 0;
     margin: 0 0;
