--- a/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
+++ b/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
@@ -1,11 +1,10 @@
 #menu {
     background: #fff;
-    position: absolute;
     z-index: 1;
     top: 50px;
     left: 10px;
     border-radius: 3px;
-    width: 120px;
+    width: 90%;
     border: 1px solid rgba(0, 0, 0, 0.4);
     font-family: 'Open Sans', sans-serif;
 }
