--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -1,11 +1,27 @@
-.App {
-  text-align: center;
+
+.map-container {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+#titleblock {
+  display: block;
+  cursor: pointer;
+  position: relative;
+  margin: 0px auto;
+  top: 10px;
+  width: 50%;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 24px;
+  text-align: center;
+  color: #fff;
+  background: #000000c4;
+  }
 
 #left-panel {
   background-color: #FFF;
@@ -47,9 +63,9 @@ p {
 }
 
 .rounded-rect {
-  background: white;
+  background: rgba(255, 255, 255, 0);
   border-radius: 10px;
-  box-shadow: 0 0 50px -25px black;
+  box-shadow: 0 0 50px -25px rgba(0, 0, 0, 0);
 }
 
 .flex-center {
@@ -75,6 +91,7 @@ p {
 }
 
 .sidebar-toggle {
+  background: rgb(255, 255, 255);
   position: absolute;
   width: 1.3em;
   height: 1.3em;
@@ -102,7 +119,8 @@ p {
   z-index: 1;
   width: 200px;
   top: 40px;
-  height: 80%;
+  display: flex;
+  height:80%;
 }
 
 /*
@@ -121,6 +139,25 @@ The toggleSidebar() function removes this class from the element in order to exp
 
 
 @media screen and (max-width: 480px) {
+
+
+
+  .map-container {
+    position: absolute;
+    top:10%;
+    height: 80%;
+    bottom: 10%;
+  }
+
+  #titleblock {
+    width: 100%;
+    height: 10%;
+    top: 0;
+    font-size: 12px;
+    border-radius: 0;
+    background: #000000;
+  }
+
 
   .calculation-box {
     bottom: 16%;
