--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -11,6 +11,7 @@
   display: block;
   cursor: pointer;
   position: relative;
+  z-index: 1;
   margin: 0px auto;
   top: 10px;
   width: 50%;
@@ -121,6 +122,16 @@ p {
   top: 40px;
   display: flex;
   height:80%;
+}
+
+.button-group-right {
+  height: 50px;
+  width: auto;
+  position: absolute;
+  top: 8px;
+  right: 60px;
+  text-align: center;
+  border-radius: 10px;
 }
 
 /*
