--- a/uas4gis/src/mapLayouts/InfoBar/InfoBar.css
+++ b/uas4gis/src/mapLayouts/InfoBar/InfoBar.css
@@ -9,7 +9,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    margin: 12px 108px;
+    margin: 28px 8px;
     border-radius: 4px;
   }
 
@@ -18,6 +18,8 @@
 
   .infobar {
     font-size: x-small;
+    padding: 12px 12px;
+    box-sizing: border-box;
   }
 
 }
