--- a/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
+++ b/uas4gis/src/mapLayouts/LayersTOC/LayersTOC.css
@@ -12,13 +12,14 @@
 #menu a {
     font-size: 13px;
     color: #404040;
+    background-color: #e3f4ff;
     display: block;
     margin: 0;
     padding: 0;
     padding: 10px;
     text-decoration: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-    text-align: center;
+    text-align: left;
 }
 
 #menu a:last-child {
@@ -26,7 +27,7 @@
 }
 
 #menu a:hover {
-    background-color: #f8f8f8;
+    background-color: #78b7e4;
     color: #404040;
 }
 
