--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -22,8 +22,7 @@
   text-align: center;
   color: #fff;
   background: #000000c4;
-  box-sizing: border-box;
-  }
+  box-sizing: border-box;  }
 
 #left-panel {
   background-color: #FFF;
