--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -152,6 +152,62 @@ The toggleSidebar() function removes this class from the element in order to exp
   transform: translateX(-195px);
 }
 
+.map-overlay {
+  position: absolute;
+  width: 25%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  background-color: #efefef;
+  max-height: 100%;
+  overflow: hidden;
+  }
+   
+  .map-overlay fieldset {
+  display: none;
+  background: #ddd;
+  border: none;
+  padding: 10px;
+  margin: 0;
+  }
+   
+  .map-overlay input {
+  display: block;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  padding: 10px;
+  margin: 0;
+  box-sizing: border-box;
+  }
+   
+  .map-overlay .listing {
+  overflow: auto;
+  max-height: 100%;
+  }
+   
+  .map-overlay .listing > * {
+  display: block;
+  padding: 5px 10px;
+  margin: 0;
+  }
+   
+  .map-overlay .listing a {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  color: #404;
+  text-decoration: none;
+  }
+   
+  .map-overlay .listing a:last-child {
+  border: none;
+  }
+   
+  .map-overlay .listing a:hover {
+  background: #f0f0f0;
+  }
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
