--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -1,4 +1,3 @@
-
 .map-container {
   height: 100%;
   position: absolute;
@@ -22,7 +21,8 @@
   text-align: center;
   color: #fff;
   background: #000000c4;
-  box-sizing: border-box;  }
+  box-sizing: border-box;
+}
 
 #left-panel {
   background-color: #FFF;
@@ -123,7 +123,7 @@ p {
   width: 200px;
   top: 40px;
   display: flex;
-  height:80%;
+  height: 80%;
 }
 
 .button-group-right {
@@ -136,13 +136,9 @@ p {
   border-radius: 10px;
 }
 
-
-
-.button-group-right > *:not(:last-child) {
-  margin-bottom: 10px; 
-} 
-
-
+.button-group-right>*:not(:last-child) {
+  margin-bottom: 10px;
+}
 
 /*
 The sidebar styling has them "expanded" by default, we use CSS transforms to push them offscreen
@@ -151,27 +147,28 @@ The toggleSidebar() function removes this class from the element in order to exp
 .left.collapsed {
   transform: translateX(-195px);
 }
-.map-overlay {
+
+.search_container {
   position: absolute;
-  width: 25%;
-  top: 0;
+  width: 20%;
+  top: 40px;
   bottom: 0;
-  left: 0;
+  right: 60px;
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  background-color: #efefef;
-  max-height: 100%;
+  background-color: #e4fbff;
+  max-height: 90%;
   overflow: hidden;
-  }
-   
-  .map-overlay fieldset {
+}
+
+.search_container fieldset {
   display: none;
-  background: #ddd;
+  background: #ccf7ff;
   border: none;
   padding: 10px;
   margin: 0;
-  }
-   
-  .map-overlay input {
+}
+
+.search_container input {
   display: block;
   border: none;
   width: 100%;
@@ -179,37 +176,50 @@ The toggleSidebar() function removes this class from the element in order to exp
   padding: 10px;
   margin: 0;
   box-sizing: border-box;
-  }
-   
-  .map-overlay .listing {
+}
+
+.search_container .listing {
   overflow: auto;
   max-height: 100%;
-  }
-   
-  .map-overlay .listing > * {
+}
+
+.search_container .listing>* {
   display: block;
   padding: 5px 10px;
   margin: 0;
-  }
-   
-  .map-overlay .listing a {
+}
+
+.search_container .listing a {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   color: #404;
   text-decoration: none;
-  }
-   
-  .map-overlay .listing a:last-child {
+}
+
+.search_container .listing a:last-child {
   border: none;
-  }
-   
-  .map-overlay .listing a:hover {
-  background: #f0f0f0;
-  }
+}
+
+.search_container .listing a:hover {
+  background: #aef3ff;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+
+
+.search_container {
+  position: absolute;
+  width: 20%;
+  top: 40px;
+  bottom: 0;
+  right: 60px;
+  background-color: #e4fbff;
+  max-height: 90%;
+  overflow: hidden;
+}
+
 }
 
 
@@ -219,7 +229,7 @@ The toggleSidebar() function removes this class from the element in order to exp
 
   .map-container {
     position: absolute;
-    top:10%;
+    top: 10%;
     height: 80%;
     bottom: 10%;
   }
