--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -150,10 +150,10 @@ The toggleSidebar() function removes this class from the element in order to exp
 
 .search_container {
   position: absolute;
-  width: 25%;
-  top: 0;
+  width: 20%;
+  top: 40px;
   bottom: 0;
-  left: 0;
+  right: 60px;
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   background-color: #e4fbff;
   max-height: 90%;
