--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -203,6 +203,14 @@ The toggleSidebar() function removes this class from the element in order to exp
   background: #aef3ff;
 }
 
+input, input:before, input:after {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
