--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -126,8 +126,24 @@ p {
   height: 80%;
 }
 
+
+.sidebar-search-toggle {
+  background: rgba(255, 255, 255, 0);
+  color: #FFF;
+  font-size: xx-large;
+  position: absolute;
+  right: -1em;
+  margin-top: 4em;
+  width: 1.3em;
+  height: 1.3em;
+  overflow: visible;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .button-group-right {
-  height: 50px;
+  height: 90%;
   width: auto;
   position: absolute;
   top: 10px;
@@ -140,6 +156,7 @@ p {
   margin-bottom: 10px;
 }
 
+
 /*
 The sidebar styling has them "expanded" by default, we use CSS transforms to push them offscreen
 The toggleSidebar() function removes this class from the element in order to expand it.
@@ -150,14 +167,14 @@ The toggleSidebar() function removes this class from the element in order to exp
 
 .search_container {
   position: absolute;
-  width: 20%;
+  width: 100%;
   top: 40px;
-  bottom: 0;
-  right: 60px;
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   background-color: #e4fbff;
-  max-height: 90%;
-  overflow: hidden;
+  max-height: 80%;
+  max-width: max-content;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .search_container fieldset {
@@ -180,13 +197,14 @@ The toggleSidebar() function removes this class from the element in order to exp
 
 .search_container .listing {
   overflow: auto;
-  max-height: 100%;
+  max-height: 80%;
 }
 
 .search_container .listing>* {
   display: block;
   padding: 5px 10px;
   margin: 0;
+  text-align: left;
 }
 
 .search_container .listing a {
@@ -203,6 +221,7 @@ The toggleSidebar() function removes this class from the element in order to exp
   background: #aef3ff;
 }
 
+
 input, input:before, input:after {
   -webkit-user-select: initial;
   -khtml-user-select: initial;
@@ -216,18 +235,6 @@ input, input:before, input:after {
     animation: App-logo-spin infinite 20s linear;
   }
 
-
-.search_container {
-  position: absolute;
-  width: 20%;
-  top: 40px;
-  bottom: 0;
-  right: 60px;
-  background-color: #e4fbff;
-  max-height: 90%;
-  overflow: hidden;
-}
-
 }
 
 
@@ -238,8 +245,13 @@ input, input:before, input:after {
   .map-container {
     position: absolute;
     top: 10%;
-    height: 80%;
-    bottom: 10%;
+  }
+
+  .search {
+    position: absolute;
+    top: 10%;
+    height: 50%;
+    bottom: 40%;
   }
 
   #titleblock {
@@ -262,6 +274,43 @@ input, input:before, input:after {
     top: 15%;
     height: 70%;
   }
+
+
+  .button-group-right {
+    padding: px 12px;
+    font-family: monospace;
+    font-size: medium;
+    z-index: 1;
+    position: absolute;
+    top: 60%;
+    right: 0px;
+    border-radius: 4px;
+    height: 40%;
+    width: 100%;
+    border-radius: 0;
+    text-align: center;
+  }
+
+
+  .button-group-right #comparebutton {
+
+    top: 88%;
+    width: 100%;
+    border-radius: 0px;
+
+  }
+
+    
+
+  .search_container {
+    width: 100%;
+    top: 0px;
+    border-radius: 8px;
+    background-color: #e4fbff;
+    max-width: 100%;
+    border-radius: 0px;
+  }
+
 }
 
 .App-header {
