--- a/uas4gis/src/App.css
+++ b/uas4gis/src/App.css
@@ -45,18 +45,22 @@
 }
 
 .calculation-box {
-
-  font-size: x-small;
-  height: 50px;
+  height: 80px;
   width: 150px;
   position: absolute;
   bottom: 30px;
   right: 10px;
   background-color: rgba(255, 255, 255, 0.7);
-  padding: 10px;
+  margin: auto;
   text-align: center;
   display: none;
   border-radius: 10px;
+}
+
+.calculated-area {
+  font-family: monospace;
+  font-size: x-small;
+  background-color: #ffffff00;
 }
 
 p {
@@ -173,9 +177,9 @@ The toggleSidebar() function removes this class from the element in order to exp
   top: 40px;
   font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   background-color: #e4fbff;
-  height: 100%;
-  min-height: 20%!important;
-  max-height: max-content;
+  height: auto;
+  min-height: 20%;
+  max-height: 90%;
   border-radius: 8px;
   overflow: hidden;
 }
@@ -225,7 +229,9 @@ The toggleSidebar() function removes this class from the element in order to exp
 }
 
 
-input, input:before, input:after {
+input,
+input:before,
+input:after {
   -webkit-user-select: initial;
   -khtml-user-select: initial;
   -moz-user-select: initial;
@@ -279,26 +285,27 @@ input, input:before, input:after {
     background: #000000;
     height: 15vh;
     max-height: 45vh;
-    font-size:x-small;
+    font-size: x-small;
 
 
   }
 
   .calculation-box {
-    background-color: rgba(255, 255, 255, 0.7);
     text-align: center;
-    background-color: #e4fbff;
-    padding: 6px 12px;
-    font-family: monospace;
-    font-size: large;
+    background-color: #cdf8ff;
     z-index: 2;
     position: absolute;
     top: 60%;
     right: 0px;
-    height: 30vh;
+    height: 34vh;
     width: 100%;
     border-radius: 0;
 
+  }
+
+  .calculated-area {
+    font-size: xx-large;
+    background-color: rgba(183, 245, 255, 0);
   }
 
 
@@ -336,7 +343,7 @@ input, input:before, input:after {
 
   }
 
-    
+
 
   .search_container {
     width: 100%;
