--- a/uas4gis/src/index.css
+++ b/uas4gis/src/index.css
@@ -1,28 +1,35 @@
-  
-
-body { margin: 0; padding: 0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
-
-body {
-  overflow: hidden;
+  body {
+    margin: 0;
+    padding: 0;
   }
-   
+
+  #map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  }
+
+  body {
+    overflow: hidden;
+  }
+
   body * {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
-   
+
   .map {
-  position: absolute;
-  top: 64px;
-  bottom: 0;
-  width: 100%;
+    position: absolute;
+    top: 64px;
+    bottom: 0;
+    width: 100%;
   }
-  
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
