--- a/uas4gis/src/mapComponents/FloodControl/FloodControl.css
+++ b/uas4gis/src/mapComponents/FloodControl/FloodControl.css
@@ -1,18 +1,17 @@
 
 .floodcontrol {
-    background-color: rgba(35, 55, 75, 0.9);
-    color: #fff;
+    /* background-color: rgba(118, 209, 255, 0.9); */
+    color: #000000;
     padding: 2px 3px;
-    font-family: monospace;
     font-size: medium;
     z-index: 1;
     position: absolute;
-    bottom: 0;
+    width: 20vw;
+    bottom: 24px;
     left: 0;
     margin: 2px 2px;
     border-radius: 4px;
   }
-
 
 @media screen and (max-width: 640px) {
 
@@ -31,7 +30,7 @@
     height: 5%;
     width: 50%;
     right: 0;
-    bottom: 45%;
+    bottom: 48%;
     text-align: center;
     border-radius: 0;
     margin: 0 0;
