--- a/uas4gis/src/mapComponents/FloodControl/FloodControl.css
+++ b/uas4gis/src/mapComponents/FloodControl/FloodControl.css
@@ -1,14 +1,18 @@
 
+.floodcontrol, .floodButton {
+  position: absolute;
+  bottom: 24px;
+  left: 0;
+
+}
+
 .floodcontrol {
     /* background-color: rgba(118, 209, 255, 0.9); */
     color: #000000;
     padding: 2px 3px;
     font-size: medium;
     z-index: 1;
-    position: absolute;
     width: 20vw;
-    bottom: 24px;
-    left: 0;
     margin: 2px 2px;
     border-radius: 4px;
   }
@@ -26,11 +30,13 @@
 @media screen and (max-width: 480px) {
 
       
+  .floodcontrol, .floodButton {
+    right: 0;
+    bottom: 48%;
+  }
   .floodcontrol {
     height: 5%;
     width: 50%;
-    right: 0;
-    bottom: 48%;
     text-align: center;
     border-radius: 0;
     margin: 0 0;
